// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`node-version default 1`] = `
"{
  \\"options\\": {
    \\"ts\\": false,
    \\"typescriptEslint\\": false,
    \\"es\\": false,
    \\"eslint\\": false,
    \\"editorconfig\\": false,
    \\"prettier\\": false,
    \\"stylelint\\": false,
    \\"gitignore\\": false,
    \\"npmrc\\": false,
    \\"readme\\": false,
    \\"githooks\\": false,
    \\"commitlint\\": false,
    \\"nodeVersion\\": true,
    \\"webpack\\": false,
    \\"build\\": false,
    \\"install\\": false,
    \\"force\\": true,
    \\"dryRun\\": false,
    \\"mode\\": \\"api\\"
  },
  \\"mergedFiles\\": {
    \\"package.json\\": {
      \\"override\\": false,
      \\"data\\": {
        \\"engines\\": {
          \\"node\\": \\">=0\\"
        }
      }
    },
    \\".node-version\\": {
      \\"override\\": false,
      \\"data\\": \\"0.1.0-mock\\"
    },
    \\".nvmrc\\": {
      \\"override\\": false,
      \\"data\\": \\"0.1.0-mock\\"
    }
  }
}"
`;

exports[`node-version default 2`] = `"0.1.0-mock"`;

exports[`node-version default 3`] = `"0.1.0-mock"`;

exports[`node-version default 4`] = `
"{
  \\"engines\\": {
    \\"node\\": \\">=0\\"
  }
}"
`;

exports[`node-version with-githooks 1`] = `
"{
  \\"options\\": {
    \\"ts\\": false,
    \\"typescriptEslint\\": false,
    \\"es\\": false,
    \\"eslint\\": false,
    \\"editorconfig\\": false,
    \\"prettier\\": false,
    \\"stylelint\\": false,
    \\"gitignore\\": false,
    \\"npmrc\\": false,
    \\"readme\\": false,
    \\"githooks\\": true,
    \\"commitlint\\": false,
    \\"nodeVersion\\": true,
    \\"webpack\\": false,
    \\"build\\": false,
    \\"install\\": false,
    \\"force\\": true,
    \\"dryRun\\": false,
    \\"mode\\": \\"api\\"
  },
  \\"mergedFiles\\": {
    \\"package.json\\": {
      \\"override\\": false,
      \\"data\\": {
        \\"engines\\": {
          \\"node\\": \\">=0\\"
        }
      }
    },
    \\".node-version\\": {
      \\"override\\": false,
      \\"data\\": \\"0.1.0-mock\\"
    },
    \\".nvmrc\\": {
      \\"override\\": false,
      \\"data\\": \\"0.1.0-mock\\"
    },
    \\".huskyrc\\": {
      \\"override\\": false,
      \\"data\\": \\"# ~/.huskyrc\\\\n# Note: it will run in /bin/sh shell\\\\nif command -v nodenv >/dev/null 2>&1; then\\\\n  eval \\\\\\"$(nodenv init -)\\\\\\"\\\\nfi\\"
    }
  }
}"
`;

exports[`node-version with-githooks 2`] = `
"# ~/.huskyrc
# Note: it will run in /bin/sh shell
if command -v nodenv >/dev/null 2>&1; then
  eval \\"$(nodenv init -)\\"
fi"
`;

exports[`node-version with-githooks 3`] = `"0.1.0-mock"`;

exports[`node-version with-githooks 4`] = `"0.1.0-mock"`;

exports[`node-version with-githooks 5`] = `
"{
  \\"engines\\": {
    \\"node\\": \\">=0\\"
  }
}"
`;
